salesforce-integration/Salesforce Components/objects/RiggohAdminConfig__c/RiggohAdminConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Riggoh Admin Settings. Do not Edit it directly!</description>
    <label>Riggoh Admin Config</label>
</CustomObject>