salesforce-integration/Salesforce Components/objects/RiggohAdminConfig__c/fields/Email_For_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Email_For_Reporting__c</fullName>
    <description>This email will be used to get scheduler reports.</description>
    <inlineHelpText>This email will be used to get scheduler reports.</inlineHelpText>
    <label>Email For Reporting</label>
    <type>Email</type>
</CustomField>