salesforce-integration/Salesforce Components/objects/RiggohAdminConfig__c/fields/Report_Range__c.field-meta.xml
<CustomField>
    <fullName>Report_Range__c</fullName>
    <description>Report Range: Week</description>
    <inlineHelpText>Report Range: Week</inlineHelpText>
    <label>Report Range</label>
    <length>10</length>
    <type>Text</type>
</CustomField>