salesforce-integration/Salesforce Components/objects/RiggohAdminConfig__c/fields/Run_Day__c.field-meta.xml
<CustomField>
    <fullName>Run_Day__c</fullName>
    <description>0- Sunday, 1 - Monday, ....</description>
    <inlineHelpText>0- Sunday, 1 - Monday, ....</inlineHelpText>
    <label>Run Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>